# MidiMan-Gtk

./: .gitignore  .gitmodules  COPYING  README.md  meson.build  pre.py  work.tinax.MidiMan.json
build-aux/meson/: postinstall.py
data/: meson.build  work.tinax.MidiMan.appdata.xml.in  work.tinax.MidiMan.desktop.in  work.tinax.MidiMan.gschema.xml
po/: POTFILES  meson.build
src/: main.cpp  meson.build  midiloader.cpp  midiloader.h  midiman-window.cpp  midiman-window.h  midiman-window.ui  midiman.gresource.xml  pianoroll-window.cpp  pianoroll-window.h
subprojects/: .gitignore  midifile_meson.build
